# Portfolio-Website

./: .dockerignore  .eslintrc.json  .example.env  .gitignore  App.ts  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  example .env.local  next.config.js  next.config.mjs  package-lock.json  package.json  readme.md  test.md  todo.md  tsconfig.json
components/: ImageItem.module.scss  age.tsx  assetGallery.module.scss  assetGallery.module.tsx  carousel.module.scss  carousel.module.tsx  footer.module.scss  footer.module.tsx  footer.tsx  galleryAsset.tsx  imageItem.module.scss  imageItem.tsx  listItem.module.scss  listItem.tsx  list_project.module.scss  list_project.module.tsx  mailing.module.scss  mailing.module.tsx  navbar.module.scss  navbar.tsx  onchange.ts  pinned_project.module.scss  pinned_project.module.tsx  project.module.scss  project.module.tsx  projectAsset.module.scss  projectAsset.tsx  project_list.module.tsx  skill.module.scss  skill.module.tsx  submit.ts  tag.module.scss  tag.tsx  tags.module.scss  tags.module.tsx
components/about/: logo.module.scss
components/about_me/: experience_menu.module.scss  experience_menu.module.tsx
components/admin/: asset.module.scss  asset.module.tsx  content.create.module.tsx  content.edit.module.scss  content.edit.module.tsx  delete.module.tsx  list.module.scss  list.module.tsx  navbar.module.scss  project.create.module.tsx  project.edit.module.tsx  project.module.tsx  projects.module.scss  search.module.scss  search.module.tsx  selector.module.scss  selector.module.tsx
components/admin_experience/: experience_item.module.scss  experience_item.module.tsx  item.module.scss  item.module.tsx
components/admin_project/: asset.module.scss  asset.module.tsx  markdown.module.scss  markdown.module.tsx  project.module.tsx  (+2 more)
data/: use_projects.ts  use_tags.ts
lib/: auth.swr.ts  db.ts
pages/: 404.tsx  505.tsx  _app.tsx  _error.tsx  about.tsx  admin.tsx  browse.tsx  contact.tsx  gallery.tsx  index.tsx  login.tsx  projects.tsx
prisma/: schema.prisma
server/: Dockerfile  todo.md
src/: Discord.ts  app.ts  main.rs  server.ts  styles.scss  util.ts  webServer.ts
styles/: _form.scss  _markdown.scss  _vars.scss  about.module.scss  admin.experiences.module.scss  admin.module.scss  admin.project.module.scss  admin.tag.module.scss  browse.module.scss  button.scss  contact.module.scss  form.module.scss  globals.scss  index.module.scss  main.module.scss  project.module.scss  projects.module.scss
types/: api_project.type.ts  asset.type.ts  experience.ts  extended_project.type.ts  gallery_image.type.ts  md.tsx  notification.ts  project.type.ts  skill.type.ts  tag.type.ts  types.ts
website/: Dockerfile
(+267 files in other folders)
