[package]
description = "API for my portfolio server"
edition = "2021"
name = "portfolio-server"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[dependencies]
anyhow = "1.0.64"
bson = {version = "2.3.0", features = ["chrono-0_4"]}
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
futures = "0.3"
image = {version = "0.24.3", default-features = false, features = ["jpeg", "jpeg_rayon", "png", "webp"]}
mongodb = "2.1.0"
rocket-validation = "0.1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = "1.21"
validator = "0.16.0"

lettre = "0.10.1"
jwt-simple = "0.11.0"
hex = "0.4.3"


[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[dependencies.google-authenticator]
version = "0.1.9"
features = ["with-qrcode"]