[package]
description = "API for my portfolio server"
edition = "2021"
name = "portfolio-server"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }


anyhow = "1.0.64"
bson = {version = "2.3.0", features = ["chrono-0_4"]}
chrono = {version = "0.4", features = ["serde"]}
mongodb = "2.1.0"
dotenv = "0.15.0"
futures = "0.3"

serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
rocket-validation = "0.1.2"
validator = "0.16.0"

lettre = "0.10.1"
jwt-simple = "0.11.0"
hex = "0.4.3"
envy = "0.4.2"

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.image]
version = "0.24.3"
default-features = false
features = ["jpeg", "jpeg_rayon", "png", "webp"]


[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[dependencies.google-authenticator]
version = "0.1.9"
features = ["with-qrcode"]
